fix(navbar): overflow

--- a/src/app/layouts/navbar/navbar.component.scss
+++ b/src/app/layouts/navbar/navbar.component.scss
@@ -54,7 +54,7 @@
   flex-wrap:         $value;
 }
 
-xm-navbar {
+:host {
   overflow: hidden;
 }
 
